@@ -62,6 +62,11 @@ sb
 F. Somenzi and R. Bloem: Efficient Büchi Automata for LTL Formulae.
 Proceedings of CAV'00.  LNCS 1855.
 .TP
+sejk
+S. Sickert, J. Esparza, S. Jaax, and J. Křetínský: Limit-Deterministic
+Büchi Automata for Linear Temporal Logic.
+Proceedings of CAV'16.  LNCS 9780.
+.TP
 tv
 D. Tabakov and M. Y. Vardi: Optimized Temporal Monitors for SystemC.
 Proceedings of RV'10.  LNCS 6418.
